# scritches

./: Cargo.toml  README.md  flake.nix
src/: config.rs  last_fm.rs  main.rs  settings.rs  work_queue.rs
