[package]
name = "scritches"
version = "0.1.0"
authors = ["Emmy Emmycelium"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["unicode", "derive"] }
config = "0.13.3"
crossbeam-channel = "0.5.8"
mpd_client = "1.2.0"
reqwest = "0.11.22"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync"] }
xdg = "2.5.2"
