[package]
name = "scritches"
version = "0.1.0"
authors = ["Emmy Emmycelium"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["unicode", "derive"] }
config = "0.13.3"
crossbeam-channel = "0.5.8"
hex = "0.4.3"
md-5 = "0.10.6"
mpd_client = "1.2.0"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = "0.11.22"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_urlencoded = "0.7.1"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["sync"] }
xdg = "2.5.2"
